--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "eslint-config-next": "^12.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
     "next": "13.0.2",
     "prettier": "^2.7.1",
     "react": "18.2.0",
@@ -24,6 +20,10 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.1",
     "eslint": "^8.30.0",
-    "eslint-plugin-react": "^7.31.11"
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-config-next": "^12.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1"
   }
 }
