--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.1",
-    "eslint-plugin-react": "^7.31.11",
     "eslint-config-next": "^12.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11"
   }
 }
