--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.1",
+    "eslint": "^8.31.0",
     "eslint-config-next": "^12.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
